testsuite/lab2-testsuite/good/scopes_different_type_in_branches.cc
int main() {
	if (1 > 0) {
		let int x = 0;	
	} else {
		let bool x = true;
	}

	return 0;
}
