testsuite/lab2-testsuite/bad/redecl_var_different_type.cc
int main() {
  let int x = 0;
  let bool x = false;
  return 0;
}
